--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,10 @@
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+<div class="container">
  <div class="image">
 
-   <img src="pna.png">
+   <img src="pna-logo.png">
  </div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -60,21 +60,54 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <p>Office / Hobby / School / Home</p>
+    <p class="header-2">Office / Hobby / School / Home</p>
     <br>
-      <div class="dropdown">
+      <div class="row dropdown">
         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">CATEGORY
         <span class="caret"></span></button>
         <ul class="dropdown-menu">
           <li><a href="#">HTML</a></li>
           <li><a href="#">CSS</a></li>
           <li><a href="#">JavaScript</a></li>
+          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
         </ul>
-          <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text">
-           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+
+        <!-- <form class="navbar-form" role="search"> -->
+        <div class="input-group">
+            <input type="text" class="form-control search-box"  placeholder="SEARCH OUR PRODUCTS AND MORE" name="srch-term" id="srch-term">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+            <br>
+        </div>
+
+        <!-- </form> -->
+          <button type="button" class="btn store-locator-btn">STORE LOCATOR</button>
       </div>
+  </div>
+    <div class="icons"></div>
+    <div class="promotions"></div>
+    <div class="latest-news"></div>
+    <h2><span style="color:red">Color</span> your world</h2>
 
+   <p>Long before timelines, tweets and hashtags <b>PNA has been adding color to people's lives all wround South Africa</b>.
+      Whether i'ts with Stationery, Art & Craft Supplies, Books or Educational Books. As SA's favourite retail store, we're constanly
+      evolving and finding new ways to connect with our customers by growing our digital family through our Website, Facebook and Twitter page.
+  </p><br>
 
+   <p><b>Sign up for our newsletter, like us on Facebook or follow us on Twhitter and you'll be the first to know about news, specials
+     and exciting development at PNA</b>
+  </p><br>
+
+  <p>We\re also constantly improving our service offering, which is why you will now be able to browse our online catalogue, which
+    will allow you to place items on yout wishlist, print it, and take it to your favourite <b>PNA</b> store where they will assist you with the items
+    you require
+  </p>
+
+  <div class="group-buttons">
+    <button type="button" class="btn join-btn">JOIN THE FRANCHISE</button>
+    <button type="button" class="btn shout-btn">GIVE US A SHOUT</button>
+ </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
