--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 <div class="container">
  <div class="image">
 
-   <img src="pna-logo.png">
+   <img src="">
  </div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -108,6 +108,32 @@
     <button type="button" class="btn join-btn">JOIN THE FRANCHISE</button>
     <button type="button" class="btn shout-btn">GIVE US A SHOUT</button>
  </div>
+
+<div class="row">
+  <div class="col-md-6"><img src="pna-logo.png"></div>
+  <div class="col-md-6"><img src="pna-logo.png"></div>
+</div>
+
+<div class="row">
+  <div class="col-md-5"><img src="pna-logo.png"></div>
+  <div class="col-md-2"><img src="pna-logo.png"></div>
+  <div class="col-md-5"><img src="pna-logo.png"></div>
+</div>
+
+<div class="row">
+  <div class="col-md-8"><img src="pna-logo.png"></div>
+  <div class="col-md-4"><img src="pna-logo.png"></div>
+</div>
+
+<div class="row footer">
+  <div class="col-md-3">QUICK LINKS</div>
+  <div class="col-md-3">POLICIES</div>
+  <div class="col-md-3">PNA PENNY FUND</div>
+  <div class="col-md-3">STAY CONNECTED</div>
+</div>
+
+
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
