--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 <div class="container">
  <div class="image">
 
-   <img src="">
+   <img src="pna-logo.png">
  </div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -66,43 +66,44 @@
         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">CATEGORY
         <span class="caret"></span></button>
         <ul class="dropdown-menu">
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">CSS</a></li>
+          <li><a href="#">PENCILS</a></li>
+          <li><a href="#">BOOKS</a></li>
           <li><a href="#">JavaScript</a></li>
           <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
         </ul>
-
         <!-- <form class="navbar-form" role="search"> -->
         <div class="input-group">
             <input type="text" class="form-control search-box"  placeholder="SEARCH OUR PRODUCTS AND MORE" name="srch-term" id="srch-term">
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
-            <br>
         </div>
-
-        <!-- </form> -->
+        <div class="text">
           <button type="button" class="btn store-locator-btn">STORE LOCATOR</button>
+          <img src="stationery.png" class="stationery-images">
+          <a href="https://www.w3schools.com"><img src="promotions.png" alt="our promotions" class="promotions-images"></a>
+          <a href="https://www.google.com"><img src="latest-news.png" alt="latest news" class="latest-news-images"></a>
+
+        </div>
       </div>
+
+    <div class="text-container">
+       <p class="color-your-world"><span style="color:red">Color</span> your world</p>
+
+       <p>Long before timelines, tweets and hashtags <b>PNA has been adding color to people's lives all wround South Africa</b>.
+          Whether i'ts with Stationery, Art & Craft Supplies, Books or Educational Books. As SA's favourite retail store, we're constanly
+          evolving and finding new ways to connect with our customers by growing our digital family through our Website, Facebook and Twitter page.
+      </p><br>
+
+       <p><b>Sign up for our newsletter, like us on Facebook or follow us on Twhitter and you'll be the first to know about news, specials
+             and exciting development at PNA</b>
+       </p><br>
+
+       <p>We\re also constantly improving our service offering, which is why you will now be able to browse our online catalogue, which
+         will allow you to place items on yout wishlist, print it, and take it to your favourite <b>PNA</b> store where they will assist you with the items
+         you require
+       </p>
   </div>
-    <div class="icons"></div>
-    <div class="promotions"></div>
-    <div class="latest-news"></div>
-    <h2><span style="color:red">Color</span> your world</h2>
-
-   <p>Long before timelines, tweets and hashtags <b>PNA has been adding color to people's lives all wround South Africa</b>.
-      Whether i'ts with Stationery, Art & Craft Supplies, Books or Educational Books. As SA's favourite retail store, we're constanly
-      evolving and finding new ways to connect with our customers by growing our digital family through our Website, Facebook and Twitter page.
-  </p><br>
-
-   <p><b>Sign up for our newsletter, like us on Facebook or follow us on Twhitter and you'll be the first to know about news, specials
-     and exciting development at PNA</b>
-  </p><br>
-
-  <p>We\re also constantly improving our service offering, which is why you will now be able to browse our online catalogue, which
-    will allow you to place items on yout wishlist, print it, and take it to your favourite <b>PNA</b> store where they will assist you with the items
-    you require
-  </p>
 
   <div class="group-buttons">
     <button type="button" class="btn join-btn">JOIN THE FRANCHISE</button>
@@ -132,7 +133,7 @@
   <div class="col-md-3">STAY CONNECTED</div>
 </div>
 
-
+  </div>
 
 
 
