--- a/app/index.html
+++ b/app/index.html
@@ -81,9 +81,8 @@
         <div class="text">
           <button type="button" class="btn store-locator-btn">STORE LOCATOR</button>
           <img src="stationery.png" class="stationery-images">
-          <a href="https://www.w3schools.com"><img src="promotions.png" alt="our promotions" class="promotions-images"></a>
-          <a href="https://www.google.com"><img src="latest-news.png" alt="latest news" class="latest-news-images"></a>
-
+          <a href="https://www.pna.co.za/promotions"><img src="promotions.png" alt="our promotions" class="promotions-images"></a>
+          <a href="https://www.pna.co.za/news"><img src="latest-news.png" alt="latest news" class="latest-news-images"></a>
         </div>
       </div>
 
