busy with footer content

--- a/app/index.html
+++ b/app/index.html
@@ -104,33 +104,77 @@
        </p>
   </div>
 
-  <div class="group-buttons">
-    <button type="button" class="btn join-btn">JOIN THE FRANCHISE</button>
-    <button type="button" class="btn shout-btn">GIVE US A SHOUT</button>
- </div>
+      <div class="group-buttons">
+        <button type="button" class="btn join-btn">JOIN THE FRANCHISE</button>
+        <button type="button" class="btn shout-btn">GIVE US A SHOUT</button>
+     </div>
 
-<div class="row">
-  <div class="col-md-6"><img src="pna-logo.png"></div>
-  <div class="col-md-6"><img src="pna-logo.png"></div>
-</div>
+ <div class="bottom-images">
+    <div class="row first-row-images">
+      <a href="https://www.pna.co.za/promotions"><img src="educational.png" alt="our promotions" class="educational"></a>
+      <a href="https://www.pna.co.za/news"><img src="for-school.png" alt="latest news" class="for-school"></a>
+    </div>
 
-<div class="row">
-  <div class="col-md-5"><img src="pna-logo.png"></div>
-  <div class="col-md-2"><img src="pna-logo.png"></div>
-  <div class="col-md-5"><img src="pna-logo.png"></div>
-</div>
+    <div class="row second-row-images">
+      <a href="https://www.pna.co.za/promotions"><img src="sa-favourite.png" alt="our promotions" class="sa-favourite"></a>
+      <a href="https://www.pna.co.za/news"><img src="new-arrivals.png" alt="latest news" class="new-arrivals"></a>
+      <a href="https://www.pna.co.za/promotions"><img src="trent-stationery.png" alt="our promotions" class="trent-stationery"></a>
+   </div>
 
-<div class="row">
-  <div class="col-md-8"><img src="pna-logo.png"></div>
-  <div class="col-md-4"><img src="pna-logo.png"></div>
-</div>
+    <div class="row third-row-images">
+      <a href="https://www.pna.co.za/promotions"><img src="browse.png" alt="our promotions" class="browse"></a>
+      <a href="https://www.pna.co.za/newsletter"><img src="sign-up.png" alt="latest news" class="sign-up"></a>
+      <!-- <a href="https://www.pna.co.za/news"><img src="browse.png" alt="latest news" class="browse"></a> -->
+      <div class="connect">
+        <p class="connect-content-with-us">Connect with Us</p>
+        <p class="connect-content1">INFO@PNASOUTHAFRICA.CO.ZA</p>
+        <p class="connect-content1">+27 (0) 11 xxx xxxx</p>
+      </div>
+  </div>
 
-<div class="row footer">
-  <div class="col-md-3">QUICK LINKS</div>
-  <div class="col-md-3">POLICIES</div>
-  <div class="col-md-3">PNA PENNY FUND</div>
-  <div class="col-md-3">STAY CONNECTED</div>
-</div>
+   <div class="bottom-border">
+      <table class="table">
+       <thead>
+         <tr class="table-header">
+           <th>OUICK LINKS</th>
+           <th>POLICIES</th>
+           <th>PNA PENNY FUND</th>
+           <th>STAY CONNECTED</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr class="table-data">
+           <td><a href="#">Home</a></td>
+           <td>Reurns & Exchange Policies</td>
+           <td>Join us in continuously adding</td>
+           <td>info@pnapnasouthafrica.co.za</td>
+         </tr>
+         <tr class="table-data">
+           <td><a href="#">About</a></td>
+           <td>Paia Manual</td>
+           <td>colour to children's lives.</td>
+           <td>+27 (0) 11 XXX XXXX</td>
+         </tr>
+         <tr class="table-data">
+           <td><a href="#">Loyality Card</a></td>
+           <td></td>
+           <td><a href="#" class="btn btn-danger" role="button">HELP US RAISE FUNDS</a></td>
+            <td></td>
+         </tr>
+         <tr class="table-data">
+           <td><a href="#"><a href="#">Store Locator</a></td>
+           <td></td>
+           <td></td>
+         </tr>
+
+         <tr class="table-data">
+           <td>2017 - PNA STATIONERS | ALL RIGHTS RESERVED | BY FGX STUDIOS</td>
+           <td></td>
+           <td></td>
+         </tr>
+       </tbody>
+     </table>
+  </div>
 
   </div>
 
