finalizing footer content

--- a/app/index.html
+++ b/app/index.html
@@ -147,7 +147,7 @@
            <td><a href="#">Home</a></td>
            <td>Reurns & Exchange Policies</td>
            <td>Join us in continuously adding</td>
-           <td>info@pnapnasouthafrica.co.za</td>
+           <td><span class="glyphicon glyphicon-envelope"></span>&nbsp;info@pnapnasouthafrica.co.za</td>
          </tr>
          <tr class="table-data">
            <td><a href="#">About</a></td>
@@ -158,8 +158,8 @@
          <tr class="table-data">
            <td><a href="#">Loyality Card</a></td>
            <td></td>
-           <td><a href="#" class="btn btn-danger" role="button">HELP US RAISE FUNDS</a></td>
-            <td></td>
+           <td><a href="#" class="btn btn-raise-funds" role="button">HELP US RAISE FUNDS</a></td>
+            <td><span class="fa fa-facebook" aria-hidden="true"></span></td>
          </tr>
          <tr class="table-data">
            <td><a href="#"><a href="#">Store Locator</a></td>
