added dic to connect

--- a/app/index.html
+++ b/app/index.html
@@ -126,10 +126,12 @@
       <a href="https://www.pna.co.za/newsletter"><img src="sign-up.png" alt="latest news" class="sign-up"></a>
       <!-- <a href="https://www.pna.co.za/news"><img src="browse.png" alt="latest news" class="browse"></a> -->
       <div class="connect">
+        <div class="connect-content">
         <p class="connect-content-with-us">Connect with Us</p>
         <p class="connect-content1">INFO@PNASOUTHAFRICA.CO.ZA</p>
         <p class="connect-content1">+27 (0) 11 xxx xxxx</p>
       </div>
+    </div>
   </div>
 
    <div class="bottom-border">
