added social icons

--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,8 @@
         <div class="connect-content">
         <p class="connect-content-with-us">Connect with Us</p>
         <p class="connect-content1">INFO@PNASOUTHAFRICA.CO.ZA</p>
+        <a href="https://twitter.com/PNASouthAfrica?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter.png" alt="our promotions" height="75" width="75" class="twitter"></a>
+          <a href="https://www.facebook.com/pnacolouryourworld/"><img src="facebook.png"  alt="our promotions" height="75" width="75" class="facebook"></a> 
         <p class="connect-content1">+27 (0) 11 xxx xxxx</p>
       </div>
     </div>
